# simple-lua-wrapper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
example/inc/: slw
example/scripts/: example1.lua
example/src/: main.cpp
wrapper/: CMakeLists.txt
wrapper/src/: Lua.cpp  Lua.hpp  ReturnCallback.hpp  Returns.hpp  Script.cpp  Script.hpp
